<resources>
    <string name="app_name">Smart Blocker</string>
    <string name="app_id">ca-app-pub-8778007212154570~3428856965</string>
    <string name="test_app_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_is_active">Smart Blocker активирован</string>
    <string name="app_need_permissions">Для продолжения необходимо предоставить все разрешения</string>
    <string name="app_exit">Вы хотите выйти из приложения?</string>
    <string name="app_network_unavailable_repeat">Интернет соединение отсутствует.\nДля продолжения, подключите интернет и повторите действие.</string>
    <string name="button_next">Дальше</string>
    <string name="button_accept">Разрешить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_ok">OK</string>
    <string name="onboarding_intro">Привет! Я - Smart Blocker. Я буду Вашим помощником в блокировании нежелательных звонков и в этом мне помогут мои умные фильтры.</string>
    <string name="onboarding_filter_conditions">Умные фильтры будут анализировать входящие вызовы по заданным Вами признакам и блокировать или разрешать их.</string>
    <string name="onboarding_info">Я всегда готов помочь разобраться в том, как я работаю. Для этого найдите иконку <small><font color='blue'>&#9432;</font></small> и по ней перейдите на экран с инструкцией.</string>
    <string name="onboarding_permissions">Для корректной работы телефон запросит необходимые разрешения. Для этого выберите “Разрешить” в системных окнах.</string>
    <string name="authorization_entrance">Вход</string>
    <string name="authorization_with_google_account">С помощью Google</string>
    <string name="authorization_enter">Войти</string>
    <string name="authorization_or">Или</string>
    <string name="authorization_email">Email</string>
    <string name="authorization_password">Пароль</string>
    <string name="authorization_sign_up">Регистрация</string>
    <string name="authorization_forgot_password">Забыли пароль?</string>
    <string name="authorization_continue_without_account">Без регистрации</string>
    <string name="authorization_forgot_password_title">Введите ваш Email и мы отправим Ваш пароль</string>
    <string name="authorization_enter_email">Введите ваш Email</string>
    <string name="authorization_password_reset_success">Подтверждающее письмо отправлено на ваш Email. Проверьте во входящих.</string>
    <string name="authorization_entrance_title">Есть аккаунт?&#160;</string>
    <string name="authorization_signing_up">Зарегистрироваться</string>
    <string name="authorization_network_unavailable">Интернет соединение отсутствует.\nДля продолжения, подключите интернет и совершите повторный вход.</string>
    <string name="filter_type_blocker">Блокировщик</string>
    <string name="filter_type_permission">Разрешение</string>
    <string name="filter_condition_full">Полный номер</string>
    <string name="filter_condition_start">Начинается</string>
    <string name="filter_condition_contain">Содержит</string>
    <string name="filter_action_create">Создать</string>
    <string name="filter_action_create_number_incomplete">Номер неполный</string>
    <string name="filter_action_create_number_invalid">Номер невалидный</string>
    <string name="filter_action_create_number_empty">Номер пустой</string>
    <string name="filter_action_create_blocker_description">Создать блокировщик?</string>
    <string name="filter_action_create_blocker_request">Создать фильтр %1$s с типом Блокировщик и признаком %2$s?</string>
    <string name="filter_action_create_blocker_success">Фильтр %1$s с типом Блокировщик и признаком %2$s создан!</string>
    <string name="filter_action_create_permission_description">Создать разрешение?</string>
    <string name="filter_action_create_permission_request">Создать фильтр %1$s с типом Разрешение и признаком %2$s?</string>
    <string name="filter_action_create_permission_success">Фильтр %1$s с типом Блокировщик и признаком %2$s создан!</string>
    <string name="filter_action_created">Создан: %s</string>
    <string name="filter_action_delete">Удалить</string>
    <string name="filter_action_delete_blocker_description">Блокировщик уже существует.</string>
    <string name="filter_action_delete_blocker_request">Удалить %s из блокировщиков?</string>
    <string name="filter_action_delete_blocker_success">%s удален из блокировщиков!</string>
    <string name="filter_action_delete_permission_description">Разрешение уже существует.</string>
    <string name="filter_action_delete_permission_request">Удалить %s из разрешений?</string>
    <string name="filter_action_delete_permission_success">%s удален из разрешений!</string>
    <string name="filter_action_transfer">Сменить</string>
    <string name="filter_action_transfer_blocker_description">Фильтр уже существует как Разрешение.</string>
    <string name="filter_action_transfer_blocker_request">Сменить тип фильтра %s на Блокировщик?</string>
    <string name="filter_action_transfer_blocker_success">Фильтр %s сменен на Блокировщик!</string>
    <string name="filter_action_transfer_permission_description">Фильтр уже существует как Блокировщик.</string>
    <string name="filter_action_transfer_permission_request">Сменить тип фильтра %s на Разрешение?</string>
    <string name="filter_action_transfer_permission_success">Фильтр %s сменен на Разрешение!</string>
    <string name="info_blocker_list"><![CDATA[<p><strong>&ldquo;Блокировщики&rdquo; - </strong><span style="font-weight: 400;">первый экран на главном(по умолчанию). Экран на котором предоставлен список </span><em><span style="font-weight: 400;">Блокировщиков</span></em><span style="font-weight: 400;">, отсортированный по первой цифре номера. Информация по каждому </span><em><span style="font-weight: 400;">Блокировщику</span></em><span style="font-weight: 400;"> содержит: сам номер, признак </span><em><span style="font-weight: 400;">Блокировщика</span></em><span style="font-weight: 400;">, количество номеров, которые будут заблокированы этим фильтром. Каждый </span><em><span style="font-weight: 400;">Блокировщик</span></em><span style="font-weight: 400;"> в списке кликабельный, по нажатию открывается экран с подробной информацией по этому </span><em><span style="font-weight: 400;">Блокировщику</span></em><span style="font-weight: 400;">.</span></p><p><span style="font-weight: 400;">Кнопка &ldquo;Фильтр&rdquo; - вызывает экран для выбора опций фильтрации списка </span><em><span style="font-weight: 400;">Блокировщиков</span></em><span style="font-weight: 400;">. Имеет три опции по признакам фильтра: </span><em><span style="font-weight: 400;">&ldquo;Полный номер&rdquo;</span></em><span style="font-weight: 400;">, </span><em><span style="font-weight: 400;">&ldquo;Начинается&rdquo;</span></em><span style="font-weight: 400;">, </span><em><span style="font-weight: 400;">&ldquo;Содержит&rdquo;</span></em><span style="font-weight: 400;">.</span></p><p><span style="font-weight: 400;">Кнопка &ldquo;Плюс&rdquo; - переносит(после выбора признака) пользователя на экран </span><strong>&ldquo;Создание фильтра&rdquo;</strong><span style="font-weight: 400;">.</span></p><p><span style="font-weight: 400;">В верхнем тулбаре название экрана </span><strong>&ldquo;Блокировщики&rdquo;</strong><span style="font-weight: 400;">, подменю поиска(поиск по номеру фильтра), подменю настроек(ведет на экран </span><strong>&ldquo;Настройки&rdquo;</strong><span style="font-weight: 400;">).</span></p><p><span style="font-weight: 400;">Кнопка &ldquo;Удаление&rdquo;. Пользователь имеет возможность удалить </span><em><span style="font-weight: 400;">Блокировщик</span></em><span style="font-weight: 400;"> или группу </span><em><span style="font-weight: 400;">Блокировщиков</span></em><span style="font-weight: 400;"> на экране. Для этого пользователь может сделать зажатие любого айтема списка, при этом в верхнем тулбаре появляется иконка удаления, а в айтемах чекбоксы. После выбора элементов списка и подтверждения удаления подменю удаления исчезает.</span></p>]]></string>
    <string name="settings_blocker">Настройки блокировщика</string>
    <string name="settings_account">Ваш аккаунт</string>
    <string name="settings_language">Язык</string>
    <string name="settings_theme">Выбор темы</string>
    <string name="settings_review">Написать разработчику</string>
    <string name="settings_privacy">Политика конфиденциальности</string>
    <string name="settings_blocker_title">Активировать Smart Blocker</string>
    <string name="settings_blocker_off">Smart Blocker не будет управлять входящими вызовами согласно ваших фильтров</string>
    <string name="settings_account_change_password_title">Сменить пароль</string>
    <string name="settings_account_enter_current_password">Текущий пароль</string>
    <string name="settings_account_enter_new_password">Новый пароль</string>
    <string name="settings_language_russian">Русский</string>
    <string name="settings_language_ukrainian">Украинский</string>
    <string name="settings_language_english">Английский</string>
    <string name="settings_theme_day">Светлая</string>
    <string name="settings_theme_night">Темная</string>
    <string name="settings_theme_auto">Согласно настроек телефона</string>
    <string name="settings_review_title">Усли у вас есть предложения или замечания вы можете их описать ниже</string>
    <string name="settings_review_hint">Сообщение</string>
    <string name="settings_review_send_button">Отправить</string>
</resources>