<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/padding_16"
        tools:context=".ui.settings.settings_list.SettingsListFragment">

        <TextView
            android:id="@+id/settings_blocker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_blocker"
            app:drawableStartCompat="@drawable/ic_settings_blocker"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_account"
            app:drawableStartCompat="@drawable/ic_settings_account"
            app:layout_constraintTop_toBottomOf="@+id/settings_blocker" />

        <TextView
            android:id="@+id/settings_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_language"
            app:drawableStartCompat="@drawable/ic_settings_language"
            app:layout_constraintTop_toBottomOf="@+id/settings_account" />

        <TextView
            android:id="@+id/settings_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_theme"
            app:drawableStartCompat="@drawable/ic_settings_theme"
            app:layout_constraintTop_toBottomOf="@+id/settings_language" />

        <TextView
            android:id="@+id/settings_evaluate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_evaluate"
            app:drawableStartCompat="@drawable/ic_settings_evaluate"
            app:layout_constraintTop_toBottomOf="@+id/settings_theme" />

        <TextView
            android:id="@+id/settings_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_review"
            app:drawableStartCompat="@drawable/ic_settings_review"
            app:layout_constraintTop_toBottomOf="@+id/settings_evaluate" />

        <TextView
            android:id="@+id/settings_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingVertical="@dimen/padding_10"
            android:paddingHorizontal="@dimen/padding_16"
            android:drawablePadding="@dimen/padding_8"
            android:background="@drawable/bg_rounded"
            android:text="@string/settings_privacy"
            app:drawableStartCompat="@drawable/ic_settings_privacy"
            app:layout_constraintTop_toBottomOf="@+id/settings_review" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>