<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16">

            <TextView
                android:id="@+id/change_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_account_change_password_title"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_current_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/change_password_title"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/change_password_current_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_account_enter_current_password"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_new_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/change_password_current_container"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/change_password_new_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_account_enter_new_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/change_password_cancel"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_10"
                android:text="@string/button_cancel"
                style="@style/StrokeButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/change_password_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_password_new_container" />

            <Button
                android:id="@+id/change_password_confirm"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/button_ok"
                app:layout_constraintBottom_toBottomOf="@+id/change_password_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/change_password_cancel"
                app:layout_constraintTop_toTopOf="@+id/change_password_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>



